@@ -2,30 +2,37 @@ package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.UserStatus;
 import com.sprint.mission.discodeit.repository.UserStatusRepository;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.context.annotation.Primary;
 import org.springframework.context.annotation.Profile;
+import org.springframework.stereotype.Component;
 import org.springframework.stereotype.Repository;
 
 import java.io.*;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Repository
-@Profile("file")
+//@Profile("file")
+//@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
 public class FileUserStatusRepository implements UserStatusRepository {
-    private static final String FILE_PATH = "src/main/resources/UserStatus.ser";
+    @Value("${discodeit.repository.file-directory}/UserStatuses.ser")
+    private String FILE_PATH;
+//    private String FILE_PATH = "src/main/resources/UserStatus.ser";
 
     @Override
     public List<UserStatus> findAll() {
-
         List<UserStatus> list = new ArrayList<>();
 
-        // try with resource 구문으로 작성
         try (FileInputStream fis = new FileInputStream(FILE_PATH);
              ObjectInputStream ois = new ObjectInputStream(fis)) {
             list = (List<UserStatus>) ois.readObject();
-        } catch (IOException | ClassNotFoundException e) {
+        } catch (IOException e) {
+            e.printStackTrace();
+        } catch (ClassNotFoundException e) {
             e.printStackTrace();
         }
 
@@ -33,7 +40,6 @@ public class FileUserStatusRepository implements UserStatusRepository {
     }
 
     public void saveAll(List<UserStatus> userStatus) {
-        // try with resource 구문으로 작성
         try (FileOutputStream fos = new FileOutputStream(FILE_PATH);
              ObjectOutputStream oos = new ObjectOutputStream(fos)) {
             oos.writeObject(userStatus);
@@ -45,17 +51,26 @@ public class FileUserStatusRepository implements UserStatusRepository {
     @Override
     public void delete(UUID id) {
         List<UserStatus> list = findAll();
-        list.removeIf(r -> r.getId().equals(id));
+        list.removeIf(r -> r.getUserId().equals(id));
         saveAll(list);
     }
 
     @Override
-    public UserStatus findById(UUID userId) {
+    public UserStatus findById(UUID id) {
+        List<UserStatus> list = findAll();
+        return list.stream()
+                .filter(userStatus -> userStatus.getId().equals(id))
+                .findFirst()
+                .orElseThrow(() -> new RuntimeException("UserStatus not found"));
+    }
+
+    @Override
+    public UserStatus findByUserId(UUID userId) {
         List<UserStatus> list = findAll();
         return list.stream()
                 .filter(userStatus -> userStatus.getUserId().equals(userId))
                 .findFirst()
-                .orElseThrow(() -> new RuntimeException("UserStatus not found"));
+                .orElseThrow(() -> new RuntimeException("User not found"));
     }
 
     @Override
@@ -65,7 +80,7 @@ public class FileUserStatusRepository implements UserStatusRepository {
                 .anyMatch(us -> us.getId().equals(userStatus.getId()))) {
             List<UserStatus> updateList = list.stream()
                     .map(us -> us.equals(userStatus) ? userStatus : us)
-                    .toList();
+                    .collect(Collectors.toList());
             saveAll(updateList);
         } else {
             list.add(userStatus);
